Delete stdout from logstash conf, add variable to be parsed by logstash init script

--- a/elasticsearch/xml-plwiki.conf
+++ b/elasticsearch/xml-plwiki.conf
@@ -1,8 +1,8 @@
 input {
     file {
-        path => "/home/samzon/projects/info-ret-systems/data/plwiki-20200301-articles.xml"
+        path => "/home/samzon/projects/info-ret-systems/data/plwiki-20200301-articles-2.xml"
         start_position => "beginning"
-        sincedb_path => "/dev/null"
+        sincedb_path => "/home/samzon/current-position"
         codec => multiline {
             pattern => "<page"
             negate => true
@@ -50,5 +50,4 @@ output {
         hosts => "localhost:9200"
         document_id => "%{id}"
     }
-    stdout {}
 }
