Extend measurement script possibilites

--- a/elasticsearch/xml-plwiki.conf
+++ b/elasticsearch/xml-plwiki.conf
@@ -1,6 +1,6 @@
 input {
     file {
-        path => "/home/samzon/projects/info-ret-systems/data/plwiki-20200301-articles-2.xml"
+        path => "FILE_TO_LOAD_VAR"
         start_position => "beginning"
         sincedb_path => "/home/samzon/current-position"
         codec => multiline {
