New Elasticsearch indexing stats, fixes for measurement script

--- a/elasticsearch/xml-plwiki.conf
+++ b/elasticsearch/xml-plwiki.conf
@@ -39,8 +39,7 @@ filter {
             "text", "\/", " \/ ",
             "text", '"', ' " ',
             "text", " +", " ",
-            "text", "\. (\. )+", ". ",
-            "text", '\n *(\n| )*', ' <br> '
+            "text", "\. (\. )+", ". "
         ]
     }
 }
